deployment/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mlauditor
  labels:
    app.kubernetes.io/name: mlauditor
    app.kubernetes.io/part-of: mlauditor
