deployment/k8s/metricbeat.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: metricbeat
  namespace: mlauditor
  labels:
    app: metricbeat
spec:
  selector:
    matchLabels:
      app: metricbeat
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: metricbeat
    spec:
      serviceAccountName: metricbeat
      terminationGracePeriodSeconds: 30
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: metricbeat
          image: docker.elastic.co/beats/metricbeat:8.13.4
          args: ["-e", "-c", "/etc/metricbeat.yml", "--system.hostfs=/hostfs"]
          securityContext:
            runAsUser: 0
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /etc/metricbeat.yml
              readOnly: true
              subPath: metricbeat.yml
            - name: modules
              mountPath: /usr/share/metricbeat/modules.d
              readOnly: true
            - name: proc
              mountPath: /hostfs/proc
              readOnly: true
            - name: sys
              mountPath: /hostfs/sys
              readOnly: true
            - name: root
              mountPath: /hostfs
              readOnly: true
            - name: data
              mountPath: /usr/share/metricbeat/data
      volumes:
        - name: config
          configMap:
            name: metricbeat-config
        - name: modules
          hostPath:
            path: /usr/share/metricbeat/modules.d
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
        - name: root
          hostPath:
            path: /
        - name: data
          hostPath:
            path: /var/lib/metricbeat-data
            type: DirectoryOrCreate
